--- a/frontend/src/components/GameScreen/GameScreen.css
+++ b/frontend/src/components/GameScreen/GameScreen.css
@@ -3,6 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh; /* Full height of the viewport */
+  width: 100vw; /* Full width of the viewport */
+  background-color: var(--primary-color);
 }
 
 .board {
